center project card images and fix alignment issues

--- a/src/styles/ProjectsStyles.css
+++ b/src/styles/ProjectsStyles.css
@@ -75,7 +75,7 @@
 .project-image picture {
   width: 100%;
   height: 100%;
-  display: flex;
+  display: block;
 }
 
 .project-image source,
